--- a/frontend/app/views/search/search.html
+++ b/frontend/app/views/search/search.html
@@ -8,8 +8,7 @@
 		ng-model-options='{ debounce: 1000 }'
 	/>
 
-<!-- TODO: Que le esta pasando a exec search -->
-	<select ng-model='searchOptions.contentType' ng-change='execSearch(searchOptions.contentType)'>
+	<select ng-model='searchOptions.contentType'>
 		<option value="posts">posts</option>
 		<option value="movies">movies</option>
 		<option value="users">users</option>
@@ -23,7 +22,7 @@
           <div ng-repeat="post in posts">
             {{post.title}}
           </div>
-          <pagination-handler-directive pagination-params="paginationParams"/>
+          <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
         </div>
       </div>
     </div>
@@ -35,7 +34,7 @@
           <div ng-repeat="user in users">
             {{user.username}}
           </div>
-          <pagination-handler-directive pagination-params="paginationParams"/>
+          <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
         </div>
       </div>
     </div>
