--- a/frontend/app/views/search/search.html
+++ b/frontend/app/views/search/search.html
@@ -16,39 +16,15 @@
 
   <div ng-switch="searchOptions.contentType">
     <div ng-switch-when="posts">
-      <div ng-controller="FilteredPostCollectionController">
-        <posts-filters-handler-directive filter-params="filterParams"></posts-filters-handler-directive>
-        <div ng-show="posts.length > 0">
-          <div ng-repeat="post in posts">
-            {{post.title}}
-          </div>
-          <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
-        </div>
-      </div>
+      <search-posts-directive query="query" enabled="{{true}}"></search-posts-directive>
     </div>
 
     <div ng-switch-when="users">
-      <div ng-controller="FilteredUserCollectionController">
-        <user-filters-handler-directive filter-params="filterParams"></user-filters-handler-directive>
-        <div ng-show="users.length > 0">
-          <div ng-repeat="user in users">
-            {{user.username}}
-          </div>
-          <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
-        </div>
-      </div>
+      <search-users-directive query="query" enabled="{{true}}"></search-users-directive>
     </div>
 
     <div ng-switch-when="movies">
-      <div ng-controller="FilteredMovieCollectionController">
-        <movies-filters-handler-directive filter-params="filterParams"></movies-filters-handler-directive>
-        <div ng-show="movies.length > 0">
-          <div ng-repeat="movie in movies">
-            {{movie.title}}
-          </div>
-          <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
-        </div>
-      </div>
+      <search-movies-directive query="query" enabled="{{true}}"></search-movies-directive>
     </div>
   </div>
 
@@ -60,6 +36,6 @@
 <!--		</select>-->
 <!--	</div>-->
 
-	<paginated-display type='searchOptions.contentType' collection='paginatedAns.collection' pagination-params='paginatedAns.paginationParams'/>
+<!--	<paginated-display type='searchOptions.contentType' collection='paginatedAns.collection' pagination-params='paginatedAns.paginationParams'/>-->
 </div>
 
