--- a/frontend/app/views/directives/searchPostsDirective.html
+++ b/frontend/app/views/directives/searchPostsDirective.html
@@ -2,8 +2,8 @@
   <posts-filters-handler-directive filter-params="filterParams"></posts-filters-handler-directive>
   <div ng-show="posts.length > 0">
     <div ng-repeat="post in posts">
-      {{post.title}}
+      <post-list-entry-directive post="post"></post-list-entry-directive>
     </div>
-    <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
+    <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch"/>
   </div>
 </div>
