--- a/frontend/app/views/login/signup.html
+++ b/frontend/app/views/login/signup.html
@@ -1,4 +1,4 @@
-<div class="uk-container uk-container-xsmall uk-margin-medium-top" ng-controller="SignupCtrl">
+<div class="uk-container uk-container-xsmall uk-margin-medium-top">
 
   <legend class="uk-legend uk-text-uppercase uk-text-center uk-text-bold uk-text-large uk-text-secondary">
     {{'USER_CREATE_SIGNUP' | translate}}
@@ -143,26 +143,27 @@
 
     <div class="uk-grid-small uk-flex uk-flex-wrap uk-flex-row uk-flex-center" uk-grid>
       <div class="uk-width-1-2">
-        <p class="uk-margin-bottom uk-text-left">{{'USER_CREATE_SELECTAVATAR' | translate}}</p>
+        <p class="uk-text-left">{{'USER_CREATE_SELECTAVATAR' | translate}}</p>
       </div>
       <div class="uk-width-1-2 uk-text-right">
-<!--        <c:set var="addAvatarError"><form:errors path="avatar"/></c:set>-->
         <div class="uk-inline uk-width-expand">
           <div uk-form-custom>
             <label>
-<!--             TODO: ver como manejar el tema de la imagen -->
-              <input path="avatar" type="file" accept="image/*"/>
+              <input id="avatar" name="avatar" type="file" accept="image/*"/>
               <button class="uk-button uk-button-primary uk-border-rounded extended-button uk-text-uppercase" type="button" tabindex="-1">
                 {{'USER_CREATE_SELECTFILE' | translate}}
               </button>
             </label>
           </div>
-          <p id="avatar-not-uploaded" >{{'USER_CREATE_NOAVATARSELECTED' | translate}}</p>
-          <p id="avatar-uploaded" class="hidden">{{'USER_CREATE_AVATARSELECTED' | translate}}
-            <span id="file-name"></span>
+          <p ng-show="avatar.file === undefined"
+             ng-class="{'uk-text-danger': avatar.error}"
+          >
+            {{'USER_CREATE_NOAVATARSELECTED' | translate}}<span class="uk-text-danger" ng-show="avatar.error"> - Max size 1MB</span>
+          </p>
+          <p ng-show="avatar.file !== undefined">{{'USER_CREATE_AVATARSELECTED' | translate}}
+            <span id="file-name">{{avatar.file.name}}</span>
           </p>
         </div>
-<!--        <form:errors path="avatar" element="p" cssClass="error uk-margin-remove-top"/>-->
       </div>
     </div>
 
