Created CommentFetchService to get comments recursively. Used it for post view.

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -32,7 +32,6 @@
 
 @import 'uikit/src/scss/uikit.scss';
 
-
 @import 'moovify/_navBar.scss';
 @import "moovify/_extraStyle.scss";
-
+@import "moovify/_comments.scss";
