Added concept button for likes.

--- a/frontend/app/views/directives/commentDisplayDirective.html
+++ b/frontend/app/views/directives/commentDisplayDirective.html
@@ -1,6 +1,8 @@
 <div>
   <p>{{comment.user.username}}</p>
   <p>{{comment.body}}</p>
+  <a ng-click="upVote()">UpVote</a>
+  <a ng-click="downVote()">DownVote</a>
   <div ng-if="comment.children.length > 0">
     <comment-tree-directive comments="comment.children"></comment-tree-directive>
   </div>
