Changed search a bit and added tab directive

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -28,6 +28,7 @@
 @import "uikit/_link.scss";
 @import "uikit/_navbar.scss";
 @import "uikit/_search.scss";
+@import "uikit/_tab.scss";
 @import "uikit/_text.scss";
 
 @import 'uikit/src/scss/uikit.scss';
