--- a/frontend/app/views/search/search.html
+++ b/frontend/app/views/search/search.html
@@ -1,27 +1,53 @@
-<div class="uk-container-small uk-margin-auto">
-	<h1>Search Results</h1>
-
-  <input type='text' placeholder='Search'
-		ng-model='query.value'
-		ng-model-options='{ debounce: 1000 }'
-	/>
-
-	<select ng-model='searchOptions.contentType'>
-		<option value="posts">posts</option>
-		<option value="movies">movies</option>
-		<option value="users">users</option>
-	</select>
-
-    <div ng-show="searchOptions.contentType === 'posts'">
-      <search-posts-directive query="query" enabled="{{true}}"></search-posts-directive>
+<main class="uk-container-small uk-margin-auto uk-padding-small">
+  <section id="search-controllers">
+    <div class="uk-flex uk-flex-middle">
+      <div class="uk-search uk-search-large uk-width-expand">
+        <label>
+          <span uk-search-icon></span>
+          <input class="uk-search-input search-query-input" type="search" placeholder="{{'SEARCH_PLACEHOLDER' | translate}}"
+                 ng-model='query.value'
+                 ng-model-options='{ debounce: 1000 }'
+          />
+        </label>
+      </div>
     </div>
+    <tab-display-directive change-type-fn="changeType" content-type="searchOptions.contentType" tabs="tabs"></tab-display-directive>
+<!--    <div class="uk-margin-medium-top">-->
+<!--      <ul class="uk-child-width-expand uk-text-uppercase uk-tab">-->
+<!--        <li class="{{searchOptions.contentType == 'posts' ? 'uk-active' : ''}}">-->
+<!--          <a ng-click="changeType('posts')">posts</a>-->
+<!--        </li>-->
+<!--        <li class="{{searchOptions.contentType == 'movies' ? 'uk-active' : ''}}">-->
+<!--          <a ng-click="changeType('movies')">movies</a>-->
+<!--        </li>-->
+<!--        <li class="{{searchOptions.contentType == 'users' ? 'uk-active' : ''}}">-->
+<!--          <a ng-click="changeType('users')">users</a>-->
+<!--        </li>-->
+<!--      </ul>-->
+<!--    </div>-->
+  </section>
+  <section id="search-results" class="uk-margin-top">
 
-    <div ng-show="searchOptions.contentType === 'users'">
-      <search-users-directive query="query" enabled="{{true}}"></search-users-directive>
-    </div>
+    <!--      <select ng-model='searchOptions.contentType'>-->
+    <!--        <option value="posts">posts</option>-->
+    <!--        <option value="movies">movies</option>-->
+    <!--        <option value="users">users</option>-->
+    <!--      </select>-->
+    <div class="uk-grid">
+      <div class="uk-width-expand uk-margin-small-top">
+        <div ng-show="searchOptions.contentType === 'posts'">
+          <search-posts-directive query="query" enabled="{{true}}"></search-posts-directive>
+        </div>
 
-    <div ng-show="searchOptions.contentType === 'movies'">
-      <search-movies-directive query="query" enabled="{{true}}"></search-movies-directive>
+        <div ng-show="searchOptions.contentType === 'users'">
+          <search-users-directive query="query" enabled="{{true}}"></search-users-directive>
+        </div>
+
+        <div ng-show="searchOptions.contentType === 'movies'">
+          <search-movies-directive query="query" enabled="{{true}}"></search-movies-directive>
+        </div>
+      </div>
     </div>
-</div>
+  </section>
+</main>
 
