--- a/frontend/app/views/directives/paginationHandlerDirective.html
+++ b/frontend/app/views/directives/paginationHandlerDirective.html
@@ -1,7 +1,7 @@
 <div ng-show="paginationParams" class="uk-flex uk-margin-small-top uk-flex-baseline">
   <div class="uk-width-auto uk-flex uk-flex-wrap uk-flex-baseline">
 
-    <label for="pagination-page-size" class="uk-form-label uk-margin-small-right uk-width-auto">
+    <label for="pagination-page-size" class="uk-form-label uk-margin-small-top uk-margin-small-right uk-width-auto">
       {{'PAGINATION_PAGE_SIZE' | translate}}
     </label>
 
