--- a/frontend/app/views/directives/userFiltersHandlerDirective.html
+++ b/frontend/app/views/directives/userFiltersHandlerDirective.html
@@ -1,9 +1,21 @@
 <div ng-if="supportedValues && filterParams">
-  <select ng-model='filterParams.role'>
-    <option value="">{{'EMPTY'}}</option>
-    <option ng-repeat="option in supportedValues['role']" ng-value="option">{{option}}</option>
-  </select>
-  <select ng-model='filterParams.orderBy'>
-    <option ng-repeat="option in supportedValues['orderBy']" ng-value="option">{{option}}</option>
-  </select>
+  <div class="uk-flex">
+    <div class="uk-width-1-2 uk-flex uk-flex-wrap uk-flex-baseline">
+      <label class="uk-padding-small-left uk-margin-small-top uk-form-label uk-margin-small-right uk-width-auto">
+        {{'USER_ROLE' | translate}}
+      </label>
+      <select ng-model='filterParams.role' class="uk-select uk-form-blank uk-width-expand">
+        <option value="">{{'ANY'| translate }}</option>
+        <option ng-repeat="option in supportedValues['role']" ng-value="option">{{option}}</option>
+      </select>
+    </div>
+    <div class="uk-width-1-2 uk-flex uk-flex-wrap uk-flex-baseline">
+      <label class="uk-padding-small-left uk-margin-small-top uk-form-label uk-margin-small-right uk-width-auto">
+        {{'SEARCH_ORDER_BY' | translate}}
+      </label>
+      <select ng-model='filterParams.orderBy' class="uk-select uk-form-blank uk-width-expand">
+        <option ng-repeat="option in supportedValues['orderBy']" ng-value="option">{{option}}</option>
+      </select>
+    </div>
+  </div>
 </div>
