--- a/frontend/app/views/directives/postFiltersHandlerDirective.html
+++ b/frontend/app/views/directives/postFiltersHandlerDirective.html
@@ -1,21 +1,20 @@
 <div ng-if="supportedValues && filterParams">
-  <div class="uk-flex uk-margin-small-top">
+  <div class="uk-flex">
     <div class="uk-width-1-3 uk-flex uk-flex-wrap uk-flex-baseline">
       <label class="uk-padding-small-left uk-margin-small-top uk-form-label uk-margin-small-right uk-width-auto">
         {{'POST_CATEGORIES' | translate}}
       </label>
       <select ng-model='filterParams.postCategory' class="uk-select uk-form-blank uk-width-expand">
-        <option value="">{{'EMPTY'}}</option>
+        <option value="">{{'ALL_POSTS' | translate}}</option>
         <option ng-repeat="option in supportedValues['postCategory']" ng-value="option">{{option}}</option>
       </select>
-
     </div>
     <div class="uk-width-1-3 uk-flex uk-flex-wrap uk-flex-baseline">
       <label class="uk-padding-small-left uk-margin-small-top uk-form-label uk-margin-small-right uk-width-auto">
         {{'POST_AGE' | translate}}
       </label>
       <select ng-model='filterParams.postAge' class="uk-select uk-form-blank uk-width-expand">
-        <option value="">{{'EMPTY'}}</option>
+        <option value="">{{'ANY_TIME' | translate }}</option>
         <option ng-repeat="option in supportedValues['postAge']" ng-value="option">{{option}}</option>
       </select>
 
