--- a/frontend/app/views/directives/search/searchMoviesDirective.html
+++ b/frontend/app/views/directives/search/searchMoviesDirective.html
@@ -1,8 +1,11 @@
 <div >
   <movies-filters-handler-directive filter-params="filterParams"></movies-filters-handler-directive>
+  <div ng-show="movies.length === 0" class="uk-margin-small-top">
+    <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'MOVIES_NOT_FOUND' | translate}}</h1>
+  </div>
   <div ng-show="movies.length > 0">
     <div ng-repeat="movie in movies">
-      {{movie.title}}
+      <movie-list-entry-directive movie="movie"></movie-list-entry-directive>
     </div>
     <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
   </div>
