Posts Home Sreen done. Added all entity fetch directives

--- a/frontend/app/views/directives/paginationHandlerDirective.html
+++ b/frontend/app/views/directives/paginationHandlerDirective.html
@@ -21,7 +21,7 @@
     <li ng-repeat="page in [].constructor(paginationParams.lastPage + 1) track by $index"
         ng-if="$index >= firstShownPage && $index <= lastShownPage"
         ng-class="{ 'uk-active': $index === paginationParams.currentPage }">
-      <a ng-class="{ 'uk-disabled': $index === paginationParams.currentPage }"
+      <a ng-class="{ 'uk-disabled': $index === paginationParams.currentPage || mutex }"
          ng-click="paginationParams.currentPage = $index"
       >{{$index + 1}}</a>
     </li>
