--- a/frontend/app/views/directives/search/searchMoviesDirective.html
+++ b/frontend/app/views/directives/search/searchMoviesDirective.html
@@ -7,6 +7,10 @@
     <div ng-repeat="movie in movies">
       <movie-list-entry-directive movie="movie"></movie-list-entry-directive>
     </div>
-    <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
+    <pagination-handler-directive
+      pagination-params="paginationParams"
+      reset-pagination-fn="resetPagination"
+      search-fn="execSearch"
+      mutex="paginationMutex" />
   </div>
 </div>
