--- a/frontend/app/views/directives/search/searchPostsDirective.html
+++ b/frontend/app/views/directives/search/searchPostsDirective.html
@@ -7,6 +7,10 @@
     <div ng-repeat="post in posts">
       <post-list-entry-directive post="post"></post-list-entry-directive>
     </div>
-    <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch"/>
+    <pagination-handler-directive
+      pagination-params="paginationParams"
+      reset-pagination-fn="resetPagination"
+      search-fn="execSearch"
+      mutex="paginationMutex" />
   </div>
 </div>
