--- a/frontend/app/views/directives/search/searchUsersDirective.html
+++ b/frontend/app/views/directives/search/searchUsersDirective.html
@@ -7,6 +7,10 @@
     <div ng-repeat="user in users">
       <user-list-entry-directive user="user"></user-list-entry-directive>
     </div>
-    <pagination-handler-directive pagination-params="paginationParams" reset-pagination-fn="resetPagination" search-fn="execSearch">
+    <pagination-handler-directive
+      pagination-params="paginationParams"
+      reset-pagination-fn="resetPagination"
+      search-fn="execSearch"
+      mutex="paginationMutex" />
   </div>
 </div>
