--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -1,20 +1,16 @@
 <div class="jumbotron">
-	<h1>'Allo, 'Allo!</h1>
-	<p class="lead">
-		<img src="resources/images/yeoman.png" alt="I'm Yeoman"><br />
-		{{'WELCOME_MESSAGE' | translate}}
-	</p>
-	<p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
 
-<div class="row marketing">
-	<h4>Angular-Require-Fullstack Generator contains</h4>
-	<ul>
-		<li>AngularJs</li>
-		<li>RequireJs</li>
-		<li>Bootstrap</li>
-		<li>i18n</li>
-		<li>Grunt</li>
-		<li>File revving</li>
-	</ul>
+	<tab-display-directive tabs="postOrders" tab-selected="order.value" ></tab-display-directive>
+  <div class="uk-grid">
+    <div class="uk-width-expand uk-margin-small-top">
+      <div ng-show="order.value === 'hottest'">
+        <fetch-posts-directive default-page-size="35" order="order.value" enabled="true" path="/posts" ></fetch-posts-directive>
+      </div>
+
+      <div ng-show="order.value === 'newest'">
+        <fetch-posts-directive default-page-size="35" order="order.value" enabled="true" path="/posts" ></fetch-posts-directive>
+      </div>
+    </div>
+  </div>
+
 </div>
