Added likes and replies to comments

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -38,4 +38,5 @@
 @import "moovify/_comments.scss";
 
 @import 'external_dependencies/easymde/easymde.scss';
+@import 'external_dependencies/normalize/_normalize.scss';
 
