--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -284,40 +284,52 @@ form {
 
 // ====================================================================
 
-.main{position:relative;}
-
 .pink-div {
   background: none repeat scroll 0 0 #feaec9;
-  height: 110px;
+/*  height: 110px;*/
 }
 
-.yellow-div {
-  background: none repeat scroll 0 0 #b5e51d;
-  height: 110px;
+.color-div {
+  background-color: #30475e;
 }
 
-.blue-cirle-div {
-  background: none repeat scroll 0 0;
+.image-profile-shape {
+  background: none repeat scroll 0 0 /*#f2a365*/;
   border-radius: 110px;
   display: block;
   width: 180px;
   height: 180px;
-  left: 15%;
+  left: 50%;
   margin: 0 auto;
-  position: absolute;
+  position: static;
   text-align: center;
-  top: 300px;
-  border: 5px solid #30475e;
+  //top: 300px;
+  //border: 8px solid #f2a365;
   vertical-align: middle;
 }
 
+.elevation-effect {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
 
-.forsomeText {
+.elevation-effect:hover {
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+.image-profile-position {
   display: block;
-  margin: 0 auto;
-  padding: 60px 37px 37px;
-  text-align: center;
-  vertical-align: middle;
+  position: absolute;
+  top: 280px;
+}
+
+.profile-details-position {
+  padding-left: 20px;
+}
+
+.add-img-btn {
+  padding-left: 100px;
+  color: #fa8a32;
 }
 
 a.like-post-button, a.like-comment-button{
