--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -1,180 +1,70 @@
-<div>
-  <!--<div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="images/banner.jpg" uk-img>
-    <h1>Background Image</h1>
-  </div>-->
-    <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="resources/images/banner.jpg" uk-img></div>
-       <img class='blue-cirle-div' src="{{loggedUser.avatar}}" alt="avatar"/>
+<div class="color-div">
+  <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light pink-div"></div>
 
-<!--
-  <div class="uk-position-cover uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle">
-    <div class="uk-width-1-4@m uk-flex-first uk-text-center">
-      <form name="avatarEditForm" enctype="multipart/form-data">
-        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-          <img class="circle uk-background-cover" alt="user-avatar" ng-src="{{loggedUser.avatar}}" uk-img>
-          <div class="uk-position-center uk-text-right">
-            <label>
-              <div uk-form-custom>
-                <input id="avatar-edit" type="file" accept="image/*" />
-                <button class="uk-transition-fade uk-button-primary uk-border-rounded">
-                  <span type="button" uk-icon="icon: upload; ratio: 2.5"></span>
-                  <div>
-                    <span>user.profile.uploadAvatar</span>
-                  </div>
-                </button>
-              </div>
-            </label>
+  <div class="uk-width-1-3 image-profile-position">
+    <div class="uk-transition-toggle" tabindex="0">
+      <div class="image-profile-shape elevation-effect" uk-form-custom>
+        <img class='image-profile-shape' ng-src="{{loggedUser.avatar}}" alt="avatar"/>
+        <input id="avatar" name="avatar" type="file" accept="image/*"/>
+        <div class="uk-position-bottom-center add-img-btn">
+          <span class="iconify uk-transition-fade" data-icon="mdi:camera-plus" data-inline="false"></span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="main-page">
+    <div class="uk-padding-remove uk-text-center" uk-grid>
+      <div class="uk-width-1-3">
+        <br><br><br><br><br>
+        <div class="profile-details-position uk-text-primary">
+          <div class="uk-text-danger" ng-show="avatar.error">{{'FORM_AVATAR_SIZE_ERROR' | translate}}</div>
+          <div class="uk-flex uk-flex-middle uk-flex-center">
+            <span class="uk-text-bold uk-text-large">{{loggedUser.name}} </span>
+            <span ng-if="loggedUser.roles.includes('ADMIN')" class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span>
+          </div>
+
+          <div class="uk-grid-column uk-child-width-1-2  uk-margin-small-bottom uk-margin-small-top" uk-grid>
+            <div class="uk-text-right"><span class="uk-text-bold">@</span>{{loggedUser.username}}</div>
+            <div class="uk-text-left"><span class="uk-text-bold">{{loggedUser.totalLikes}}</span> Votes</div>
+          </div>
+
+          <hr class="uk-divider-icon">
+
+          <div class="uk-grid-column uk-child-width-1-2 uk-margin-small-bottom" uk-grid>
+            <div class="uk-text-right"><span class="uk-text-bold">{{loggedUser.followerCount}}</span> Followers</div>
+            <div class="uk-text-left"><span class="uk-text-bold">{{loggedUser.followerCount}}</span> Following</div>
+            <div class="uk-text-bold uk-text-right uk-margin-small-top">In Moovify since:</div>
+            <div class="uk-text-left uk-margin-small-top">{{ loggedUser.creationDate | date: 'MMM yyyy' }}</div>
+            <div class="uk-text-bold uk-text-right uk-margin-small-top">Email:</div>
+            <div class="uk-text-left uk-margin-small-top">{{loggedUser.email}}</div>
+          </div>
+          <div class="uk-text-italic uk-margin-small-bottom">
+            {{loggedUser.description}}
           </div>
         </div>
-        <div> &lt;!&ndash;<form:errors path="avatar" element="p" cssClass="error"/>&ndash;&gt;</div>
-      </form>
-    </div>
-    <div class="uk-width-2-3@m uk-padding-remove">
-      <h3 class="uk-card-title uk-margin-remove-bottom userTitle">
-        <a class="edit-icon-button uk-margin-small-left" uk-icon="icon: pencil; ratio: 1" title="edit.title" data-inline="false" uk-toggle="target: #edit-username-modal"></a>
-        user.view.followers
-      </h3>
-      <p class="uk-text-meta uk-margin-remove-top">
-        user.profile.inMoovifySince (loggedUser.creationDate)
-      </p>
-
-      <ul class="uk-list uk-list-bullet">
-        <li class="userTitle">
-          user.profile.Name
-          <a class="edit-icon-button uk-margin-small-left" uk-icon="icon: pencil; ratio: 1" title="edit.title"  data-inline="false" uk-toggle="target: #edit-name-modal"></a>
-        </li>
-        <li class="userTitle">user.profile.Email</li>
-&lt;!&ndash;        <c:if test="${loggedUser.admin}" >&ndash;&gt;
-          <li class="userTitle">
-            user.profile.Administrator
-            <span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="admin.title"></span>
-          </li>
-&lt;!&ndash;        </c:if>&ndash;&gt;
-&lt;!&ndash;        <c:if test="${fn:length(loggedUser.description) == 0}">&ndash;&gt;
-          <li class="userTitle">
-            <a uk-toggle="target: #edit-description-modal">user.profile.notDescription</a>
-          </li>
-&lt;!&ndash;        </c:if>&ndash;&gt;
-&lt;!&ndash;        <c:if test="${fn:length(loggedUser.description) != 0}">&ndash;&gt;
-          <li class="userTitle m-long-text">
-            user.profile.Description
-            <a class="edit-icon-button uk-margin-small-left" uk-icon="icon: pencil; ratio: 1" title="edit.title"  data-inline="false" uk-toggle="target: #edit-description-modal"></a></li>
-&lt;!&ndash;        </c:if>&ndash;&gt;
-      </ul>
-&lt;!&ndash;      <c:if test="${loggedUser.validated}">&ndash;&gt;
-        <p class="uk-margin-left">
-          <a href="/user/changePassword">
-          <button id="submit-form-button" class="uk-button uk-button-default uk-border-rounded" type="button">
-            user.profile.edit.changePassword
-          </button>
-          </a>
-        </p>
-&lt;!&ndash;      </c:if>&ndash;&gt;
+      </div>
+      <div class="uk-width-2-3">
+        <tab-display-directive tab-selected="selectedTab.value" tabs="tabs" ></tab-display-directive>
+      </div>
     </div>
   </div>
-</div>
-<div class="uk-container">
-&lt;!&ndash;  <c:if test="${!loggedUser.validated}" >&ndash;&gt;
-    <div class="uk-text-center uk-margin-auto uk-padding-large">
-      <h1 class="uk-h1">user.profile.ConfirmationEmail</h1>
-      <p class="uk-text-bold">
-        user.profile.ConfirmationEmail.body
-        <a href="/user/resendConfirmation">
-        user.profile.ResendEmail
-        </a>
-      </p>
-    </div>
-&lt;!&ndash;  </c:if>&ndash;&gt;
 
-&lt;!&ndash;  <c:if test="${loggedUser.validated}">&ndash;&gt;
-    <div class="uk-margin-medium-top">
-      <ul class="uk-child-width-expand uk-tab">
-        <li class=""> &lt;!&ndash;${currentState == 0 ? 'uk-active' : ''}&ndash;&gt;
-          <a href=""> &lt;!&ndash;${currentState != 0 ? postsURL : ''}&ndash;&gt;
-            user.profile.yourPosts
-          </a>
-        </li>
-        <li class=""> &lt;!&ndash;${currentState == 1 ? 'uk-active' : ''}&ndash;&gt;
-          <a href=""> &lt;!&ndash;${currentState != 1 ? commentsURL : ''}&ndash;&gt;
-            user.profile.yourComments
-          </a>
-        </li>
-        <li class=""> &lt;!&ndash;${currentState == 2 ? 'uk-active' : ''}&ndash;&gt;
-          <a href=""> &lt;!&ndash;${currentState != 2 ? favouritePostsURL : ''}&ndash;&gt;
-            user.profile.bookmarkedPosts
-          </a>
-        </li>
-        <li class=""> &lt;!&ndash;${currentState == 3 ? 'uk-active' : ''}&ndash;&gt;
-          <a href=""> &lt;!&ndash;${currentState != 3 ? followedUsersURL : ''}&ndash;&gt;
-            user.profile.yourFollowedUsers
-          </a>
-        </li>
-      </ul>
-    </div>
-&lt;!&ndash;  </c:if>&ndash;&gt;
-</div>
 
-<form name="userEditForm" class="uk-hidden" id="edit-user-form">
-
-  <label>
-    <input name="username" id="user-edit-username-input"/>
-  </label>
-&lt;!&ndash;  <form:errors path="username" element="p" cssClass="error" id="user-edit-username-error"/>&ndash;&gt;
-
-  <label>
-    <input name="name" id="user-edit-name-input"/>
-  </label>
-&lt;!&ndash;  <form:errors path="name" element="p" cssClass="error" id="user-edit-name-error"/>&ndash;&gt;
-
-  <label>
-    <textarea name="description" id="user-edit-description-input"></textarea>
-  </label>
-&lt;!&ndash;  <form:errors path="description" element="p" cssClass="error" id="user-edit-description-error"/>&ndash;&gt;
-</form>
-
-&lt;!&ndash; edit name modal &ndash;&gt;
-<div id="edit-name-modal" uk-modal>
-  <div class="uk-modal-dialog uk-modal-body">
-    <h2 class="uk-modal-title">user.profile.edit.name</h2>
-    <span class="uk-text-normal uk-text-italic uk-text-bold">user.profile.edit.name.meta</span>
-    <p id="edit-user-name-error" class="error"></p>
-    <div class="uk-flex">
-      <input id="edit-name-modal-input"
-             class="uk-input uk-margin-right uk-input uk-border-rounded uk-width-expand"
-             value="{{loggedUser.name}}"/>
-      <button id="edit-name-modal-submit" class="uk-button uk-button-primary uk-border-rounded uk-width-auto"
-              type="button">user.profile.edit.submit.button</button>
+  <div id="avatar-update-modal" uk-modal>
+    <div class="uk-modal-dialog">
+      <div class="uk-modal-header">
+        <h2 class="uk-modal-title">{{'UPDATE_AVATAR_MODAL_TITLE' | translate}}</h2>
+      </div>
+      <div class="uk-modal-body">
+        {{'UPDATE_AVATAR_MODAL_BODY' | translate}}
+        {{avatar.file.name}}
+      </div>
+      <div class="uk-modal-footer uk-text-right">
+        <button class="uk-button uk-button-default uk-modal-close uk-text-primary" type="button" ng-click="avatar.file = undefined">{{'UPDATE_AVATAR_MODAL_CANCEL' | translate}}</button>
+        <button class="uk-button uk-button-primary" type="button" ng-click="uploadAvatar()">{{'UPDATE_AVATAR_MODAL_ACCEPT' | translate}}</button>
+      </div>
     </div>
   </div>
-</div>
 
-&lt;!&ndash; edit username modal &ndash;&gt;
-<div id="edit-username-modal" uk-modal>
-  <div class="uk-modal-dialog uk-modal-body">
-    <h2 class="uk-modal-title">user.profile.edit.username</h2>
-    <span class="uk-text-normal uk-text-italic uk-text-bold">user.profile.edit.username.meta</span>
-    <p id="edit-user-username-error" class="error"></p>
-    <div class="uk-flex">
-      <input id="edit-username-modal-input"
-             class="uk-input uk-margin-right uk-input uk-border-rounded uk-width-expand"
-             value="{{loggedUser.username}}"/>
-      <button id="edit-username-modal-submit" class="uk-button uk-button-primary uk-border-rounded uk-width-auto"
-              type="button">user.profile.edit.submit.button</button>
-    </div>
-  </div>
-</div>
-
-&lt;!&ndash; edit description modal &ndash;&gt;
-<div id="edit-description-modal" uk-modal>
-  <div class="uk-modal-dialog uk-modal-body">
-    <h2 class="uk-modal-title">user.profile.edit.description</h2>
-    <span class="uk-text-normal uk-text-italic uk-text-bold">user.profile.edit.description.meta</span>
-    <p id="edit-user-description-error" class="error"></p>
-    <div class="uk-flex">
-            <textarea id="edit-description-modal-input"
-                      class="uk-input uk-margin-right uk-input uk-border-rounded uk-width-expand">{{loggedUser.description}}</textarea>
-      <button id="edit-description-modal-submit" class="uk-button uk-button-primary uk-border-rounded uk-width-auto"
-              type="button">user.profile.edit.submit.button</button>
-    </div>
-  </div>
--->
 </div>
